plugins {
	id 'eclipse'
	id 'scala'
	id 'java'
	id 'org.javamodularity.moduleplugin'
}

repositories {
	mavenCentral()
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(19)
	}
}

dependencies {
	implementation 'org.scala-lang:scala3-library_3:3.2.1'
	// Commented out. Causes:
	// Error occurred during initialization of boot layer
	// java.lang.module.FindException: Unable to derive module descriptor for /home/flo/.gradle/caches/modules-2/files-2.1/org.scalatest/scalatest_3/3.2.15/dfaadda82c4c862bf164bd114803fd163cf3b73e/scalatest_3-3.2.15.jar
	// Caused by: java.lang.IllegalArgumentException: scalatest.3: Invalid module name: '3' is not a Java identifier
	//testImplementation 'org.scalatest:scalatest_3:3.2.15'
}

// https://users.scala-lang.org/t/gradle-7-6-jdk-19-and-scala-3-java-lang-classnotfoundexception-scala-predef-even-though-scala-library-2-13-10-jar-is-in-classpath/8972/7?u=flow
modularity.patchModule("org.scala.lang.scala3.library", "scala-library-2.13.10.jar")

def ENABLE_PREVIEW = "--enable-preview"

testing {
	suites {
		test {
			useJUnitJupiter('5.9.2')
			targets.all {
				testTask.configure {
					// https://stackoverflow.com/a/72905390/194894
					jvmArgs(ENABLE_PREVIEW)
				}
			}
		}
	}
}

tasks.withType(JavaCompile) {
	options.compilerArgs += [
		ENABLE_PREVIEW,
		"-Xlint:preview",
	]
}

tasks.withType(JavaExec) {
	jvmArgs.add(ENABLE_PREVIEW)
}
